// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useStyleProps return correct style object for props 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={
      {
        "backgroundColor": "#ffc0cb",
        "padding": 3,
      }
    }
    animatedStyle={
      {
        "value": {
          "backgroundColor": "#ffc0cb",
          "padding": 3,
        },
      }
    }
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffc0cb",
        "padding": 3,
      }
    }
  >
    <Text
      accessibilityRole="text"
      accessible={true}
      allowFontScaling={true}
      animate={
        {
          "color": "#1A2138",
        }
      }
      animatedStyle={
        {
          "value": {
            "color": "#1A2138",
          },
        }
      }
      collapsable={false}
      style={
        {
          "color": "#1A2138",
          "fontFamily": "Poppins-Regular",
          "fontSize": 16.099999999999998,
          "fontStyle": "normal",
          "fontWeight": "400",
          "includeFontPadding": false,
          "letterSpacing": 0,
          "lineHeight": 22,
        }
      }
    >
      2
    </Text>
  </View>
</View>
`;

exports[`useStyleProps return empty style object for missing props 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={{}}
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    style={{}}
  >
    <Text
      accessibilityRole="text"
      accessible={true}
      allowFontScaling={true}
      animate={
        {
          "color": "#1A2138",
        }
      }
      animatedStyle={
        {
          "value": {
            "color": "#1A2138",
          },
        }
      }
      collapsable={false}
      style={
        {
          "color": "#1A2138",
          "fontFamily": "Poppins-Regular",
          "fontSize": 16.099999999999998,
          "fontStyle": "normal",
          "fontWeight": "400",
          "includeFontPadding": false,
          "letterSpacing": 0,
          "lineHeight": 22,
        }
      }
    >
      0
    </Text>
  </View>
</View>
`;
